View Issue Details

IDProjectCategoryView StatusLast Update
0030278Open CASCADEOCCT:Foundation Classespublic2018-10-28 16:13
ReporterosaAssigned Toosa 
PrioritynormalSeveritytweak 
Status closedResolutionfixed 
Target Version7.4.0Fixed in Version7.4.0 
Summary0030278: Foundation Classes - make IndexedMapNode as protected inside of NCollection_IndexedMap
DescriptionInternal class IndexedMapNode is private inside of NCollection_IndexedMap. As result it is impossible to use it in inherited classes (for example to implement own FindIndex() method).
Steps To ReproduceNot required
TagsNo tags attached.
Test case numberNot needed

Activities

git

2018-10-22 11:34

administrator   ~0080170

Branch CR30278 has been created by osa.

SHA-1: b49b181901ee3cde623f92547b78194a6bef1d29


Detailed log of new commits:

Author: osa
Date: Mon Oct 22 11:32:46 2018 +0300

    0030278: Foundation Classes - make IndexedMapNode as protected inside of NCollection_IndexedMap

osa

2018-10-22 11:35

developer   ~0080171

Dear Kirill, please review

kgv

2018-10-22 13:51

developer   ~0080191

Please take the patch.

osa

2018-10-22 13:53

developer   ~0080192

The build on Jenkins: http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR30278-master-OSA/

apn

2018-10-22 15:34

administrator   ~0080196

Combination -
OCCT branch : CR30278 SHA - b49b181901ee3cde623f92547b78194a6bef1d29
Products branch : master SHA - 35af85def09c66ceeaf90b4e4fb8b54e68d5e98c
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

git

2018-10-28 16:13

administrator   ~0080418

Branch CR30278 has been deleted by inv.

SHA-1: b49b181901ee3cde623f92547b78194a6bef1d29

Related Changesets

occt: master b49b1819

2018-10-22 08:32:46

osa

Details Diff
0030278: Foundation Classes - make IndexedMapNode as protected inside of NCollection_IndexedMap Affected Issues
0030278
mod - src/NCollection/NCollection_IndexedMap.hxx Diff File

Issue History

Date Modified Username Field Change
2018-10-22 11:29 osa New Issue
2018-10-22 11:29 osa Assigned To => kgv
2018-10-22 11:33 osa Assigned To kgv => osa
2018-10-22 11:33 osa Status new => assigned
2018-10-22 11:34 git Note Added: 0080170
2018-10-22 11:35 osa Note Added: 0080171
2018-10-22 11:35 osa Assigned To osa => kgv
2018-10-22 11:35 osa Status assigned => resolved
2018-10-22 11:35 osa Steps to Reproduce Updated
2018-10-22 13:51 kgv Note Added: 0080191
2018-10-22 13:51 kgv Assigned To kgv => bugmaster
2018-10-22 13:51 kgv Severity minor => tweak
2018-10-22 13:51 kgv Status resolved => reviewed
2018-10-22 13:51 kgv Target Version => 7.4.0
2018-10-22 13:53 osa Note Added: 0080192
2018-10-22 15:34 apn Test case number => Not needed
2018-10-22 15:34 apn Note Added: 0080196
2018-10-22 15:34 apn Status reviewed => tested
2018-10-28 13:20 osa Changeset attached => occt master b49b1819
2018-10-28 13:20 osa Assigned To bugmaster => osa
2018-10-28 13:20 osa Status tested => verified
2018-10-28 13:20 osa Resolution open => fixed
2018-10-28 16:13 git Note Added: 0080418