0030278: Foundation Classes - make IndexedMapNode as protected inside of NCollection_IndexedMap